# analog

./: .gitignore  .gitmodules  Bill-of-Materials.md  LICENSE  README.md
CUPL/: PicoPal.jed  build.bat  picopal.doc  picopal.pld  picopal.si  picopal.sim  picopal.wo
GERBERS-Rev0/: AppleII-Pico-B_Cu.gbl  AppleII-Pico-B_Mask.gbs  AppleII-Pico-B_Paste.gbp  AppleII-Pico-B_SilkS.gbo  AppleII-Pico-Edge_Cuts.gm1  AppleII-Pico-F_Cu.gtl  AppleII-Pico-F_Mask.gts  AppleII-Pico-F_Paste.gtp  AppleII-Pico-F_SilkS.gto  AppleII-Pico-In1_Cu.g2  AppleII-Pico-In2_Cu.g3  AppleII-Pico-job.gbrjob  AppleII-Pico.drl
GERBERS-Rev1/: AppleII-Pico-B_Cu.gbl  AppleII-Pico-B_Mask.gbs  AppleII-Pico-B_Paste.gbp  (+10 more)
v2-analog-rev1/: CMakeLists.txt  README.md  lwipopts.h  tusb_config.h
v2-analog-rev1/common/: abus.c  abus.h  abus.pio  buffers.c  buffers.h  config.c  config.h  flash.c  flash.h  flash_regs.h  flash_upload.c  main.c  modes.h  usb_descriptors.c
v2-analog-rev1/diag/: businterface.c  businterface.h  diag.c
v2-analog-rev1/fs/: businterface.c  fs.c  fs.h
v2-analog-rev1/parallel/: businterface.c  businterface.h  grappler_rom.h  parallel.c  parallelbuffer.c  parallelbuffer.h
v2-analog-rev1/scripts/: generate_hires_color_patterns.py  generate_hires_dotpatterns.py
v2-analog-rev1/serial/: businterface.c  businterface.h  serial.c  serialbuffer.c  serialbuffer.h  serialrom.h
v2-analog-rev1/vga/: .render_test.c.swp  businterface.c  businterface.h  character_rom.c  character_rom.h  hires_color_patterns.h  hires_dot_patterns.h  logo.h  render.c  render.h  render_80col.c  render_dgr.c  render_dhgr.c  render_hires.c  render_lores.c  render_shr.c  render_terminal.c  render_test.c  render_text.c  render_videx.c  terminal_rom.c  vga.pio  vgabuf.c  vgabuf.h  vgamain.c  vgaout.c  vgaout.h
v2-analog-rev1/z80/: businterface.c  businterface.h  z80buf.c  z80buf.h  z80cpu.h  z80main.c  z80rom.h
(+35 files in other folders)
